--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h3 {
   align-content: center;
   margin-left: 25%;
   border-radius: 3rem;
-  box-shadow: 10px 10px rgba(200,200,200,0.2), 8px 8px rgba(200,200,200,0.4);
+  box-shadow:0px 10px 10px rgba(0,0,0,0.7),0px 0px 50px rgba(0,0,0,0.2);
 
 }
 .header .logo {
